# nelson

./: .env.example  .gitignore  .pre-commit-config.yaml  IMPLEMENTATION_PLAN.md  Makefile  PLAN.md  PROJECT_CONTEXT.md  README.md  docker-compose.yml  pyproject.toml
.do/: app.yaml
.github/workflows/: ci.yml
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0ae6b35ef59c_add_api_keys_and_user_default_models.py  1804062098cc_add_index_on_llm_models_provider_id.py  1aa31ef3a43f_merge_openrouter_and_consensus_branches.py  425cd5ccf52a_add_users_user_settings_magic_links_.py  5d4430a49477_add_structured_columns_to_llm_calls.py  8a4ac0743e64_add_summarizer_model_id_to_user_settings.py  b026dd15a505_seed_providers_and_models.py  cd633003e3e4_openrouter_dynamic_models.py  d7eb6b492f55_create_providers_and_llm_models_tables.py  d9d545447940_add_sessions_and_llm_calls_tables.py
backend/app/: config.py  database.py  main.py
backend/app/agent/: consensus_agent.py  model_registry.py  prompts.py  types.py
backend/app/auth/: dependencies.py  router.py  schemas.py  service.py
backend/app/catalog/: router.py  schemas.py
backend/app/consensus/: broadcast.py  router.py  schemas.py  service.py
backend/app/keys/: encryption.py  router.py  schemas.py  service.py  validation.py
backend/app/models/: __init__.py  api_key.py  base.py  default_model.py  llm_call.py  llm_model.py  magic_link.py  provider.py  refresh_token.py  session.py  user.py  user_custom_model.py
backend/app/openrouter/: router.py  schemas.py  service.py
backend/app/users/: router.py  schemas.py  service.py
backend/tests/: conftest.py  test_agent_types.py  test_api_key_model.py  test_auth_dependencies.py  test_auth_integration.py  test_auth_models.py  test_auth_router.py  test_auth_service.py  test_broadcast.py  test_catalog_router.py  test_classify_model_type.py  test_consensus_agents.py  test_consensus_orchestrator.py  test_custom_models.py  test_custom_models_settings.py  test_database.py  test_encryption.py  test_key_validation.py  test_keys_router.py  test_keys_service.py  test_model_registry.py  test_session_endpoints.py  test_session_models.py  test_sse_stream.py  test_structured_persistence.py  test_users_router.py
docs/: ACCEPTANCE_TESTS.md  APPLICATION_PROTOCOL.md  CLI_SPEC.md  CODING_AGENT_HANDOFF.md  EVENT_SCHEMA.md  FLOWS.md  OPUS_PREPLAN.md  PROMPT_SPEC.md  PYPROJECT_TOOLING_SPEC.md  PYTHON_ENGINEERING_STANDARDS.md  RUN_RESULT_SCHEMA.md
docs/plans/: 2026-03-04-milestone-2-auth-design.md  2026-03-04-milestone-2-auth-plan.md  2026-03-05-milestone-2.5-deploy-design.md  2026-03-05-milestone-2.5-deploy-plan.md  2026-03-06-streaming-ux-plan.md  (+16 more)
frontend/: Dockerfile  next.config.ts  package.json  vitest.config.ts
tests/: conftest.py
(+98 files in other folders)
