[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nelson"
version = "0.1.0"
description = "Multi-LLM consensus agent"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "typer>=0.15,<1",
    "openai>=2,<3",
    "pydantic>=2.11,<3",
    "rich>=14,<15",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.11,<1",
    "pyright>=1.1,<2",
    "pytest>=8,<9",
    "pytest-asyncio>=0.25,<1",
    "coverage>=7,<8",
    "pre-commit>=4,<5",
]

[project.scripts]
nelson = "nelson.cli.app:app"

[tool.hatch.build.targets.wheel]
packages = ["src/nelson"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "F",      # pyflakes
    "E", "W", # pycodestyle
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "A",      # flake8-builtins
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
    "RUF",    # ruff-specific
    "ASYNC",  # flake8-async
    "TRY",    # tryceratops
]
ignore = [
    "TRY003",  # long exception messages are fine
]

[tool.ruff.format]
docstring-code-format = true

[tool.pyright]
pythonVersion = "3.14"
typeCheckingMode = "strict"
include = ["src", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "unit: unit tests",
    "integration: integration tests",
    "live: live tests requiring real API keys",
]
filterwarnings = [
    "error",
    "ignore:'asyncio.*' is deprecated:DeprecationWarning:pytest_asyncio",
]

[tool.coverage.run]
source = ["nelson"]
branch = true

[tool.coverage.report]
fail_under = 90
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "assert_never",
]
